# sml-training

./: .gitignore  README.md  check_weights.py  main.py  pyproject.toml  requirements.txt
src/: data_processor.py  evaluator.py  fine_tuner.py  inference.py
