[project]
name = "sml-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2 ; sys_platform != 'darwin'",
    "datasets>=4.4.1",
    "peft==0.11.1",
    "pypdf>=6.3.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers==4.45.0",
]
